@@ -1,3 +1,7 @@
+2008-08-06  Carlos Garnacho  <carlos@imendio.com>
+
+	* src/tracker-indexer/modules/evolution.c: Index IMAP attachments.
+
 2008-08-06  Ivan Frade  <ivan.frade@nokia.com>
 
 	* src/trackerd/tracker-index.c: Using g_param_spec_boolean to set
